Kursor postavljen na pointer prilikom prelaska preko odredjenog filtera

--- a/Implementacija/explore_serbia/public/css/style.css
+++ b/Implementacija/explore_serbia/public/css/style.css
@@ -280,7 +280,7 @@ form {
 span.dropdown-item:hover{
     background-color: blue;
     color: white;
-    cursor: hand;
+    cursor: pointer;
 }
 
 .filterSelected {
